--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -222,6 +222,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+    <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
