--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,6 @@
     
     <servlet-mapping>
         <servlet-name>powercounter</servlet-name>
-        <url-pattern>/api</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
