added import bean and set hibernate to memory

--- a/webapp/src/main/resources/META-INF/spring/database.properties
+++ b/webapp/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
-#Updated at Thu Aug 15 20:32:14 CEST 2013
-#Thu Aug 15 20:32:14 CEST 2013
+#Updated at Fri Aug 16 22:26:41 CEST 2013
+#Fri Aug 16 22:26:41 CEST 2013
 database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc\:hsqldb\:file\:powercounter;shutdown\=true
+database.url=jdbc\:hsqldb\:mem\:powercounter
 database.username=sa
 database.password=
