--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -290,7 +290,7 @@
 		<dependency>
 			<groupId>de.computerlyrik.spring</groupId>
 			<artifactId>spring-securityobjects</artifactId>
-			<version>1.1.5</version>
+			<version>1.1.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
